# budget-app

./: .gitignore  README.md  docker-compose.shared.yml  docker-compose.yml  init-multi-db.sh
.github/workflows/: deploy-dev.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  entrypoint.sh  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 23dda21bb96b_be_3b_transactions.py  303bf175532f_be_3c_receipts_and_line_items.py  60f67d2f81da_be_3d_budget_targets.py  6fce909bcbf1_be_3a_users_and_categories.py  8b706faf71d8_bud_1_unique_budget_target_per_category.py
backend/app/: celery_app.py  config.py  dependencies.py  models.py  schemas.py  seed.py
backend/app/routes/: analytics.py  budgets.py  categories.py  receipts.py  transactions.py
backend/app/tasks/: ocr.py
backend/app/utils/: analytics_calc.py  budget_calc.py  categoriser.py  csv_parser.py  receipt_parser.py
backend/sample_data/: brd_sample.csv  revolut_sample.csv
backend/scripts/: seed_data.py
deploy/: PIPELINE_TEST.txt  README.md  budget-app-pull.service  budget-app-pull.timer  budget-app.dev.env.example  docker-compose.dev.yml  pull-deploy.sh
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.jsx  store.js
frontend/src/api/: client.js
frontend/src/components/: BudgetChart.jsx  BudgetForm.jsx  CategoryBreakdownChart.jsx  CsvImportDialog.jsx  Layout.jsx  ReceiptDetailDialog.jsx  SummaryPanel.jsx  TransactionForm.jsx
frontend/src/pages/: Analytics.jsx  Budgets.jsx  Dashboard.jsx  Receipts.jsx  Transactions.jsx
