[project]
name = "budget-app-backend"
version = "0.1.0"
description = "FastAPI backend for the Budget App"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.5",
    "celery>=5.6.3",
    "email-validator>=2.3.0",
    "fastapi>=0.115",
    "pillow>=12.3.0",
    "psycopg[binary]>=3.3.4",
    "pydantic-settings>=2.14.2",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.32",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.30",
]
